samples/_failures_safe/1761045345_d6bc83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1af17adc.c: In function ‘main’:
./samples/SAFE/__tmp_1af17adc.c:143:5: error: expected expression at end of input
  143 |     if (compressed_size ==
      |     ^~
./samples/SAFE/__tmp_1af17adc.c:143:5: error: expected declaration or statement at end of input
